--- a/html/index.html
+++ b/html/index.html
@@ -193,7 +193,7 @@
                 </ul>
             </div>
             <div class="product">
-                <img src="../img/1783883_main.jpg_480Wx480H">
+                <img src="../img/Laptop HP 15s fq2716TU i3.jpg">
                 <h3>Laptop HP 15s fq2716TU i3</h3>
                 <p>Price: 8.920.000₫</p>
                 Vote: <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span><br>
