--- a/html/index.html
+++ b/html/index.html
@@ -193,7 +193,7 @@
                 </ul>
             </div>
             <div class="product">
-                <img src="../img/7559-laptop-tcc.jpg">
+                <img src="../img/Laptop Dell Gaming G15 5511 i5.webp">
                 <h3>Laptop HP 15s fq2716TU i3</h3>
                 <p>Price: 8.920.000₫</p>
                 Vote: <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span><br>
